# hubitatmaker

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  dev  pyproject.toml  setup.cfg  setup.py
doc/: api.md
hubitatmaker/: __init__.py  const.py  error.py  hub.py  server.py  types.py
hubitatmaker/tests/: events.json  test_hub.py  test_types.py
scripts/: __init__.py  publish.py
stubs/getmac/: __init__.pyi  __main__.pyi  getmac.pyi
