[tool.poetry]
name = "hubitatmaker"
version = "0.3.14"
description = "A library for interfacing with Hubitat via its Maker API"
authors = ["Jason Cheatham <jason@jasoncheatham.com>"]
readme = "README.md"
homepage = "https://github.com/jason0x43/hubitatmaker"
repository = "https://github.com/jason0x43/hubitatmaker"
keywords = ["hubitat"]
license = "MIT"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
getmac = "^0.8.2"
python = "^3.7.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782.0"
pre-commit = "^2.7.1"
isort = "^5.5.2"
toml = "^0.10.1"

[tool.poetry.scripts]
init = "scripts:init"
publish = "scripts:publish"
test = "scripts:test"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
